--- a/sass/sections/_notice-board.scss
+++ b/sass/sections/_notice-board.scss
@@ -78,7 +78,7 @@
     .notice-board {
       .message {
         h3{
-          font-size: 2rem;
+          font-size: 1.8rem;
         }
       }
     }
